--- a/src/Components/AutoScrollList/AutoScrollList.less
+++ b/src/Components/AutoScrollList/AutoScrollList.less
@@ -1,12 +1,11 @@
-.file_content {
+.file-content {
   overflow: auto;
   overflow-x: hidden;
   position: relative;
+
   :global {
-    .list_item_scroll {
+    .list-item-scroll {
       position: absolute;
-    }
-    .list_item_content {
     }
   }
 }
