style: 界面样式优化

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -1,3 +1,18 @@
 .dumi-default-header-left {
   padding-right: 10px;
 }
+
+.dumi-default-header .dumi-default-header-content,
+body .dumi-default-doc-layout > main {
+  max-width: calc(100% - 48px);
+  min-width: 1440px;
+}
+
+#root .dumi-default-doc-layout-mobile-bar + main > .dumi-default-content {
+  min-height: 100%;
+  max-width: 100%;
+}
+
+.dumi-default-header {
+  min-width: 1440px;
+}
