--- a/src/Components/Test/demo.module.less
+++ b/src/Components/Test/demo.module.less
@@ -1,6 +1,7 @@
-.up_box {
+.upBox {
   display: flex;
-  min-height: 2.395833vw;
+  min-height: 2.393vw;
+
   :global {
     .ant-form-item {
       margin-bottom: 0 !important;
