--- a/src/Components/Test/FileListItem.module.less
+++ b/src/Components/Test/FileListItem.module.less
@@ -1,20 +1,22 @@
-.up_list {
+.upList {
   flex: auto;
-  padding-left: 0.520833vw;
+  padding-left: 0.52vw;
   border: 1px solid #c8c8c8;
   border-radius: 0.3125vw;
-  margin-right: 0.520833vw;
+  margin-right: 0.52vw;
   max-height: 6.25vw;
   height: 6.25vw;
   overflow: auto;
   max-width: 100%;
   position: relative;
   display: block;
+
   :global {
-    .up_list_item {
-      line-height: 2.239583vw;
+    .upListItem {
+      line-height: 2.239vw;
     }
-    .up_list_item_scroll {
+
+    .upListItemScroll {
       position: absolute;
       left: 0;
       top: 0;
