--- a/src/Components/CustomTree/TreeItem.module.less
+++ b/src/Components/CustomTree/TreeItem.module.less
@@ -3,7 +3,7 @@
 @extend: calc(@spacing + 2px); //延长线
 
 // 线样式
-@line: {
+.line() {
   content: '';
   display: block;
   width: 3px;
@@ -13,9 +13,9 @@
   right: 0;
   margin: auto;
   background: rgb(6, 183, 253);
-};
+}
 // 加减号icon
-@icon: {
+.icon() {
   position: absolute;
   border: solid 1px #666;
   border-radius: 100%;
@@ -30,15 +30,18 @@
   margin: 0;
   padding: 0;
   // opacity: 0;
-};
+}
 
 .card {
   ul {
     display: flex;
     justify-content: center;
     list-style-type: none;
+    padding-inline-start: 0; // 起始位置padding
+    // li {
 
-    li {
+    // }
+    :global {
       .item {
         display: flex;
         justify-content: center;
@@ -58,7 +61,7 @@
           color: #fff;
 
           .plus {
-            @icon();
+            .icon();
 
             &:hover {
               opacity: 1;
@@ -66,7 +69,7 @@
           }
 
           .reduce {
-            @icon();
+            .icon();
 
             top: -5px;
 
@@ -76,44 +79,44 @@
           }
         }
       }
-    }
-  }
-  // 向下的线
-  .line-bottom {
-    &::after {
-      @line();
+      // 向下的线
+      .line-bottom {
+        &::after {
+          .line();
 
-      bottom: -@line-length;
-    }
-  }
-  // 向上的线
-  .line-top {
-    &::before {
-      @line();
+          bottom: -@line-length;
+        }
+      }
+      // 向上的线
+      .line-top {
+        &::before {
+          .line();
 
-      top: -@line-length;
-    }
-  }
-  // 向左的线
-  .line-left {
-    &::after {
-      @line();
+          top: -@line-length;
+        }
+      }
+      // 向左的线
+      .line-left {
+        &::after {
+          .line();
 
-      width: calc(50% + @spacing);
-      height: 3px;
-      left: calc((-50%) - @extend);
-      top: 0;
-    }
-  }
-  // 向右的线
-  .line-right {
-    &::before {
-      @line();
+          width: calc(50% + @spacing);
+          height: 3px;
+          left: calc((-50%) - @extend);
+          top: 0;
+        }
+      }
+      // 向右的线
+      .line-right {
+        &::before {
+          .line();
 
-      width: calc(50% + @spacing);
-      height: 3px;
-      right: calc((-50%) - @extend);
-      top: 0;
+          width: calc(50% + @spacing);
+          height: 3px;
+          right: calc((-50%) - @extend);
+          top: 0;
+        }
+      }
     }
   }
 }
