feat: 自定义树状图

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -31,13 +31,19 @@ body .dumi-default-doc-layout > main {
   height: 100vh;
 }
 
-.dumi-default-footer {
+.dumi-default-content .dumi-default-footer {
   position: absolute;
   bottom: 0;
   right: 0;
   left: 0;
+  margin: 0 48px;
+  padding: 10px 0;
 }
 
 .markdown {
   margin-bottom: 100px;
+}
+
+.dumi-default-content .dumi-default-previewer {
+  margin-bottom: 70px;
 }
