feat: 添加动态按钮

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -73,3 +73,7 @@ body .dumi-default-doc-layout > main {
     height: auto;
   }
 }
+
+#root .dumi-default-header:not([data-static]) {
+  top: 20px;
+}
