style: 获取主色调设置背景-图片排列样式修改

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -75,5 +75,6 @@ body .dumi-default-doc-layout > main {
 }
 
 #root .dumi-default-header:not([data-static]) {
-  top: 20px;
+  // top: 20px;
+  padding-top: 20px;
 }
